返回  导航固定

--- a/src/main/webapp/pages/credit/usercenter/all_orders.html
+++ b/src/main/webapp/pages/credit/usercenter/all_orders.html
@@ -372,7 +372,7 @@ tempDict.getSysDictDetailString('upload_busType',model.business_type !);
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" id="modal_submit" onclick="chexiao()">提交</button>
+                <button type="button" class="btn btn-primary"  onclick="chexiao()">提交</button>
             </div>
         </div>
     </div>
