--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_translate_quality.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_translate_quality.html
@@ -92,7 +92,7 @@
         </div>
 
         <!-- fixed 底部 -->
-        <div class="position-fixed fixed-btn-well d-none justify-content-end align-items-center px-5">
+        <div class="position-fixed fixed-btn-well d-flex justify-content-end align-items-center px-5">
 
         </div>
     </div>
