--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_translate_quality.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_translate_quality.html
@@ -38,6 +38,10 @@
         .select2Box {
             margin: 1.5rem 1rem 0;
         }
+        .select2Box div {
+   			 width: calc(100% - 7rem);
+		}
+        
         .radio-box,.unit{
             border:none;
         }
