--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
@@ -269,7 +269,7 @@ tempDict.getSysDictDetailString('upload_busType','');
 
                  <form class="tableValue" action="/credit/front/orderProcess/statusSaveWithFileUpLoad" class="form-inline " enctype="multipart/form-data" method="post">
 
-                    <div class="file-upload" style="padding-left: 0">
+                    <div class="file-upload2" style="padding-left: 0">
                         <label class="mt-3 ml-3">上传附件：</label>
                         <div class="uploadFile mt-3 mr-4">
                             <input type="file" name="Files_1" id="upload_file" value="" class="file-input" />
@@ -426,17 +426,17 @@ tempDict.getSysDictDetailString('upload_busType','');
                          <div class="form-group row d-flex justify-content-around mb-3">
                             <div class="input-group mt-2 col-md-6">
                                 <label class="control-label col-md-4" for="">代理价格：</label>
-                              	<input name="" class="form-control  col-md-8" id="" disabled="disabled"/>
+                              	<input name="" class="form-control  col-md-8" id="agentPrice" disabled="disabled"/>
                             </div>
                             <div class="input-group mt-2 col-md-6">
                                  <label class="control-label col-md-4" for="">价格币种：</label>
-                              	<input name="" class="form-control  col-md-8" id="" disabled="disabled"/>
+                              	<input name="" class="form-control  col-md-8" id="agentCurrency" disabled="disabled"/>
                             </div>
                         </div>
                          <div class="form-group row d-flex justify-content-around mb-3 pb-3" style="border-bottom: solid 1px #e5e5e5">
                             <div class="input-group mt-2 col-md-6">
                                  <label class="control-label col-md-4" for="">Working days：</label>
-                              	<input  name="" class="form-control  col-md-8" id="" disabled="disabled"/>
+                              	<input  name="" class="form-control  col-md-8" id="agentTime" disabled="disabled"/>
                             </div>
                             <div class="input-group mt-2 col-md-6">
                                 <label class="control-label col-md-4" for="">是否发送邮件：</label>
@@ -601,20 +601,7 @@ tempDict.getSysDictDetailString('upload_busType','');
                             </div>
 
                         </div>
-                        <div class="reste form-group row d-flex mb-4 file-upload-box" style="padding-left: 4.5rem">
-                            <div class="file-upload2">
-                                <label class=" ml-3">上传相关资料：</label>
-                                <div class="uploadFile mr-3 mt-3">
-                                    <input type="file" name="file_url" id="upload_file" value=""
-                                           class="file-input" />
-                                    <div class="over-box">
-                                        <img
-                                                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAABxSURBVGhD7c9BCsAwCABB//82/9RcPJRibg1rYAe8BCRuSDojM5/31PM9DKAZQDOAZgDNAJoBNANoBtCwgO/H06bO3OuWJk2dudctTZo6c69bmjR15nnYx38xgGYAzQCaATQDaAbQDKAZQLs+QLpCxAKykAXNUf4CGwAAAABJRU5ErkJggg==">
-                                        <p class="mt-2">上传附件</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                       
                         <input name="attr.create_by" type="hidden" value="" id="createBy">
                         <input name="attr.status" type="hidden" value="0"> <input
                             name="id" type="hidden" value="0"> <input id="priceid"
@@ -677,7 +664,7 @@ tempDict.getSysDictDetailString('upload_busType','');
 <!-- 批量分配 -->
 
   <script src="${BASE_PATH }static/credit/assets/layui/layui.all.js"></script>
-  <script src="${BASE_PATH }static/credit/js/order_manage/create_order.js"></script>
+  <script src="${BASE_PATH }static/credit/js/order_manage/create_order.js"></script> 
 </html>
 <script type="text/javascript">
 function agentchange(){
