--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
@@ -281,7 +281,7 @@ tempDict.getSysDictDetailString('upload_busType','');
                         
                     </div>
                  <input  name="statusCode" id="status"  type="hidden" value="">
-              	 <input  name="model.id" id="orderId"  type="hidden" value="">
+              	 <input  name="model.id" id="orderId2"  type="hidden" value="">
                 </div>
                 <div class="modal-footer">
                     <input type="button" class="btn btn-primary" id="modal_submit" value="提交"/>
