--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_info_import.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_info_import.html
@@ -10,6 +10,11 @@ tempDict.getSysDictDetailString('agentcategory',''); %>
     <meta name="renderer" content="webkit">
     <link rel="stylesheet" href="${BASE_PATH}static/credit/css/order_manage/order_verify.css">
     <link rel="stylesheet" href="${BASE_PATH}static/credit/css/order_manage/order_submit.css">
+    <style>
+    .fixed-table-body-columns table tr {
+		height:54.8px!important;
+	}
+    </style>
     <script type="text/javascript">
 	    var BASE_PATH = "${BASE_PATH }";
     </script>
