详情页和质检翻页样式，表格样式

--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_translate_quality.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_translate_quality.html
@@ -95,7 +95,7 @@
             </div>
         </div>
         <!-- 滚动内容 -->
-        <div class="main-content">
+        <div class="main-content px-3">
 
         </div>
 
