--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -55,6 +55,7 @@
         }
         table{
             word-break: break-all;
+            table-layout: fixed;
         }
         table.table thead th{
             white-space: nowrap;
