删掉提示错误的图片

--- a/src/main/webapp/pages/error/401.html
+++ b/src/main/webapp/pages/error/401.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div style="width: 100%;margin: 0 auto;text-align: center;">
-		<img alt="" src="${BASE_PATH}/static/images/common/error_401.png">
+		<!-- <img alt="" src="${BASE_PATH}/static/images/common/error_401.png"> -->
 	</div>
 </body>
 </html>
