--- a/src/main/webapp/pages/error/500.html
+++ b/src/main/webapp/pages/error/500.html
@@ -29,7 +29,7 @@
 </style>
 <body>
 	<div style="width: 100%; margin: 0 auto; text-align: center;">
-		<img alt="" src="${BASE_PATH}/static/images/common/error_500.png">
+	<!-- 	<img alt="" src="${BASE_PATH}/static/images/common/error_500.png"> -->
 	</div>
 	<div id="error">
 		<div>
