--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_info_import.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_info_import.html
@@ -12,7 +12,7 @@ tempDict.getSysDictDetailString('agentcategory',''); %>
     <link rel="stylesheet" href="${BASE_PATH}static/credit/css/order_manage/order_submit.css">
     <style>
     .fixed-table-body-columns table tr {
-		height:54.8px!important;
+		height:4.58rem!important;
 	}
     </style>
     <script type="text/javascript">
