流程进度和订单录入的行对齐

--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_info_import.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_info_import.html
@@ -12,8 +12,11 @@ tempDict.getSysDictDetailString('agentcategory',''); %>
     <link rel="stylesheet" href="${BASE_PATH}static/credit/css/order_manage/order_submit.css">
     <style>
     .fixed-table-body-columns table tr {
-		height:54.8px!important;
+		/*height:54.8px!important;*/
 	}
+    .fixed-table-body-columns {
+         top: initial;
+    }
     </style>
     <script type="text/javascript">
 	    var BASE_PATH = "${BASE_PATH }";
