--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_translate.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_translate.html
@@ -37,6 +37,10 @@
         .return_back:hover{color: #A5A5A5}
         .return_back img{display: inline-block;vertical-align: middle;margin-top: -3px;width: 14px}
         .return_back span{padding-left: 8px}
+        .bootstrap-table .fixed-table-footer .moneyCol {
+		    padding-left: 1.5rem !important;
+		}
+		        
     </style>
 </head>
 <body>
