整理full页面,还没完成

--- a/src/main/webapp/WEB-INF/pages/lab/flatMap.html
+++ b/src/main/webapp/WEB-INF/pages/lab/flatMap.html
@@ -52,6 +52,9 @@
 -->
 <script>
     //调用父页面的方法来保证子页面加载完了再执行平面地图加载
-    parent.parentMethod()
+    if(parent.parentMethod){
+        parent.parentMethod()
+    }
+
 </script>
 </html>
