--- a/src/main/webapp/WEB-INF/pages/lab/full.html
+++ b/src/main/webapp/WEB-INF/pages/lab/full.html
@@ -1,12 +1,33 @@
-## layout("ulab.html",{title:"U-lab全球互联数据中心"}){
+
 <html lang="zh-CN" >
+<script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>
+<script>
+    /*屏幕描述
+     一共 7x3 个屏幕，每一块屏幕是1360x768，
+     总共的大小就是9520x2304，比预计像素少7x6=42个像素。*/
+
+    var pageH = $(window).height();
+    var pageW = pageH * 16 * 7 / (9 * 3);
+    var bodyScale = pageH / 595;
+    var bodyFontSize = bodyScale * 100 + "%";
+    if (pageH > 2300) { // 如果是大屏幕(2304)
+        pageW -= 52
+    }
+    function pageResize() {
+        $("body").css("font-size", bodyFontSize);
+        $("#content").css("width", pageW);
+        $(".fullScreen_map").css("width", pageW);//全屏页面是绝对定位,宽度100%只能取自屏幕
+        console.log("~~~~~~~~~窗口高度：" + pageH + ",\n宽度:"+pageW+" \nbody字号：" + bodyFontSize)
+    }
+
+    var contextPath='${contextPath!}';
+</script>
+
 <link rel="stylesheet" href="${contextPath!}/static/asserts/css/bootstrap.min.css">
 <link rel="stylesheet" href="${contextPath!}/static/css/common.css">
 <link rel="stylesheet" href="${contextPath!}/static/css/index_left.css">
-
-<!--<link rel="stylesheet" href="${contextPath!}/static/css/index_right.css">-->
 <link rel="stylesheet" href="${contextPath!}/static/css/fullScreen_map.css">
-<!--<script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>-->
+
 <script src="${contextPath!}/static/asserts/js/bootstrap.min.js"></script>
 <script src="${contextPath!}/static/asserts/echarts/echarts-3.5.2.js"></script>
 <script src="${contextPath!}/static/js/manyEcharts.js"></script>
@@ -14,7 +35,6 @@
 <script src="${contextPath!}/static/asserts/echarts/wordcloudFromNet.js"></script>
 <script>
     var fromPage='${fromPage!}';
-   // document.domain="10.130.96.65";
 </script>
 <script src="${contextPath!}/static/js/full.js"></script>
 <script src="${contextPath!}/static/js/full_statistics.js"></script>
@@ -35,6 +55,6 @@
 
 </body>
 </html>
-##}
+
 
 
