--- a/src/main/webapp/pages/credit/usercenter/index.html
+++ b/src/main/webapp/pages/credit/usercenter/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <% var orderstatus = tempDict.getListSysDictDetail('orderstate'); %>
 <% var agent = agent.getAgentIdString(); %>
+  <% var
+reportType = reportType.getReportTypeString2(model.report_type!''); %>
+
 <html>
 <head>
     <meta charset="utf-8" />
