总状态的实验室状态页面恢复完成

--- a/src/main/webapp/WEB-INF/pages/lab/index.html
+++ b/src/main/webapp/WEB-INF/pages/lab/index.html
@@ -29,7 +29,7 @@
 <link rel="stylesheet" href="${contextPath!}/static/asserts/css/bootstrap.min.css">
 <link rel="stylesheet" href="${contextPath!}/static/css/common.css">
 <!--<link rel="stylesheet" href="${contextPath!}/static/css/index_left180508.css">-->
-<link rel="stylesheet" href="${contextPath!}/static/css/index_right.css">
+<!--<link rel="stylesheet" href="${contextPath!}/static/css/index_right.css">-->
 <script src="${contextPath!}/static/asserts/js/bootstrap.min.js"></script>
 <script src="${contextPath!}/static/asserts/echarts/echarts-3.5.2.js"></script>
 <script src="${contextPath!}/static/js/manyEcharts.js"></script>
