--- a/src/main/webapp/pages/credit/common/menu.html
+++ b/src/main/webapp/pages/credit/common/menu.html
@@ -182,7 +182,44 @@
             <img src="${BASE_PATH }static/credit/imgs/index/error.png"/>
             <span class="error-text">获取数据失败</span>
         </div>
+        <!-- 消息弹窗 -->
+        <div class="messageBox hideThis">
+        	<ul>
+        		<li>我不是一个人</li>
+        		<li>我不是一个人</li>
+        		<li>我不是一个人</li>
+        		<li>我不是一个人</li>
+        		<li>我不是一个人</li>
+        		<li>我不是一个人</li>
+        		<li>我不是一个人</li>
+        		<li>我不是一个人</li>
+        		<li>我不是一个人</li>
+        		<li>我不是一个人</li>
+        		<li>我不是一个人</li>
+        	</ul>
+        	<div class="clickRead">全部标为已读</div>
+        </div>
+        
+        
 </div>        
+
+<!-- Modal -->
+<div class="modal fade" id="notice" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body p-5"></div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">确定</button>
+            </div>
+        </div>
+    </div>
+</div>
       <script type="text/javascript">
 	    var BASE_PATH = "${BASE_PATH }";
     </script> 
