--- a/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/create_order.html
@@ -299,6 +299,9 @@ tempDict.getSysDictDetailString('upload_busType',model.business_type !);
 					<img src="${BASE_PATH }static/credit/imgs/order/icons8-notice.png"
 						alt=""> 检测到相同公司报告
 				</h5>
+				 <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="display:none">
+                    <span aria-hidden="true">&times;</span>
+                </button>
 			</div>
 			<div class="modal-body">
 				<div class="text-center my-3 modal-label">报告时间：</div>
