102中英文里的出资情况表格上面加日期; 102红印的股东信息上面加日期; 详情页顶部固定tab和“返回上一级”的距离样式

--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_common.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_detail.css">
     <style>
+        .tab-fixed {
+            top:6.5rem;
+        }
+        .main{
+            padding-top: 2rem;
+        }
         h3.l-title{
             padding-left: 0;
         }
@@ -77,9 +83,10 @@
             top: 4.2rem;
             left: 16.6%;
             padding-left: 20px;
+            padding-top: .5rem;
             z-index: 99;
             display: inline-block;
-            height: 1.5rem;
+            height: 2.5rem;
             width: 100%;
             line-height: 1.5rem;
             background-color: white;
