--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_translate_quality.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_translate_quality.html
@@ -60,9 +60,10 @@
             top: 4.2rem;
             left: 16.6%;
             padding-left: 20px;
+            padding-top: .5rem;
             z-index: 99;
             display: inline-block;
-            height: 1.5rem;
+            height: 2.5rem;
             width: 100%;
             line-height: 1.5rem;
             background-color: white;
@@ -70,6 +71,13 @@
         .return_back:hover{color: #A5A5A5}
         .return_back img{display: inline-block;vertical-align: middle;margin-top: -3px;width: 14px}
         .return_back span{padding-left: 8px}
+
+        .tab-fixed{
+            top:6.5rem;
+        }
+        .main-header {
+            padding-top: 2rem;
+        }
     </style>
 </head>
 <body>
