--- a/src/main/webapp/pages/credit/custom/custom_pay_add.html
+++ b/src/main/webapp/pages/credit/custom/custom_pay_add.html
@@ -60,6 +60,7 @@ var bodyContent = {
 %>
 <form name="form1" action="" method="post" class="form-horizontal">
 	<input type="hidden" name="model.table_id" value=" ${model.table_id}" />
+	<input type="hidden" name="model.id" value=" ${model.id}" />
 	<!-- 数据列表 -->
 	<table class="table">
 	    <tr>
