--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_info_import.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_info_import.html
@@ -226,10 +226,11 @@ tempDict.getSysDictDetailString('agentcategory',''); %>
                     </div>
                         <div class="file-upload">
                     <div class="row mt-3 mb-2">
-                        <div class="input-group col-md-6 align-items-top">
+                        <div class="input-group px-5">
                             <label class="control-label" id="firmChineseName" style="line-height: 38px">公司中文名称：</label>
-                            <input type="text" id="companyZHNames" class="form-control">
-                           
+                            <input type="text" id="companyZHNames" class="form-control mr-5">
+                            <label class="control-label" id="firmEnglishName" style="line-height: 38px">公司英文名称：</label>
+                            <input type="text" id="companyEnNames" class="form-control">
                         </div>
                     </div>
 
