内容更新公司中文名称bug

--- a/src/main/webapp/pages/credit/usercenter/all_orders.html
+++ b/src/main/webapp/pages/credit/usercenter/all_orders.html
@@ -691,7 +691,10 @@ tempDict.getSysDictDetailString('upload_busType',model.business_type !);
                                           class="reste form-control search-input  col-md-10" name=""
                                           rows="4" cols="" placeholder="请输入其他细节" id="remakes"></textarea>
                             </div>
-
+							<input 
+								 name="attr.company_by_report" type="hidden"
+                                    class="reste form-control  col-md-8" id="client_company_by_report"
+							/>
                         </div>
                         <div class="reste form-group row d-flex mb-4 file-upload-box" style="padding-left: 4.5rem">
                             <div class="file-upload2">
