翻译库修改

--- a/src/main/webapp/pages/credit/translate/translate_edit.html
+++ b/src/main/webapp/pages/credit/translate/translate_edit.html
@@ -61,6 +61,12 @@ var bodyContent = {
 	<table class="table">
 		<%  // 列表头部%>
 				<tr>
+					<td>原来语句</td>
+					<td>
+						<input class="form-control" type="text" name="model.correct_phrase_ch" value="${model.correct_phrase_ch}" />
+					</td>
+				</tr>
+				<tr>
 					<td>错误语句</td>
 					<td>
 						<input class="form-control" type="text" name="model.error_phrase" value="${model.error_phrase}" />
