--- a/src/main/webapp/pages/credit/translate/translate_edit.html
+++ b/src/main/webapp/pages/credit/translate/translate_edit.html
@@ -61,19 +61,19 @@ var bodyContent = {
 	<table class="table">
 		<%  // 列表头部%>
 				<tr>
-					<td>原来语句</td>
+					<td>正确的中文简体</td>
 					<td>
 						<input class="form-control" type="text" name="model.correct_phrase_ch" value="${model.correct_phrase_ch}" />
 					</td>
 				</tr>
 				<tr>
-					<td>错误语句</td>
+					<td>错误的翻译结果</td>
 					<td>
 						<input class="form-control" type="text" name="model.error_phrase" value="${model.error_phrase}" />
 					</td>
 				</tr>
 				<tr>
-					<td>正确语句</td>
+					<td>正确的翻译结果</td>
 					<td>
 						<input class="form-control" type="text" name="model.correct_phrase" value="${model.correct_phrase}" />
 					</td>
