--- a/src/main/webapp/pages/credit/translate/translate_list.html
+++ b/src/main/webapp/pages/credit/translate/translate_list.html
@@ -86,9 +86,9 @@ var bodyContent = {
 				<tr>
 					<th>序号</th>
 					<%  // 列表头部 %>
-					<th name="t1.correct_phrase_ch" class="sorting">原来的中文</th> 
-					<th name="t1.error_phrase" class="sorting">错误语句</th> 
-					<th name="t1.correct_phrase" class="sorting">正确语句</th> 
+					<th name="t1.correct_phrase_ch" class="sorting">正确的中文简体</th> 
+					<th name="t1.error_phrase" class="sorting">错误的翻译结果</th> 
+					<th name="t1.correct_phrase" class="sorting">正确的翻译结果</th> 
 					<th name="t4.realname" class="sorting">创建人</th> 
 					<th name="t1.create_date" class="sorting">创建时间</th> 
 					<th name="t1.remarks" class="sorting">备注</th> 
