396报告的一些处理

--- a/src/main/webapp/pages/credit/country/country_list.html
+++ b/src/main/webapp/pages/credit/country/country_list.html
@@ -1,4 +1,4 @@
-﻿<% var Continent = tempDict.getSysDictDetailString('continent',attr.continent !); %>
+<% var Continent = tempDict.getSysDictDetailString('continent',attr.continent !); %>
 <% var usabledName = tempDict.getSysDictDetailString('usabled',attr.usabled !); %>
 
 ﻿<% 
