--- a/src/main/webapp/pages/credit/pricemanager/price_list.html
+++ b/src/main/webapp/pages/credit/pricemanager/price_list.html
@@ -1,4 +1,4 @@
-﻿<% var orderspeed = tempDict.getSysDictDetailString('orderspeed',attr.order_speed !); %>
+<% var orderspeed = tempDict.getSysDictDetailString('orderspeed',attr.order_speed !); %>
 <% var ordertype = tempDict.getSysDictDetailString('ordertype',attr.order_type !); %>
 <% var countrytype = tempDict.getSysDictDetailString('country',attr.country_type !); %>
 <% var usabled = tempDict.getSysDictDetailString('usabled',attr.usabled !); %>
