--- a/src/main/webapp/pages/credit/reportmanager/reporttemp_list.html
+++ b/src/main/webapp/pages/credit/reportmanager/reporttemp_list.html
@@ -1,4 +1,4 @@
-﻿<% var reportType = reportType.getReportTypeString(model.report_type!''); %>
+<% var reportType = reportType.getReportTypeString(model.report_type!''); %>
 <% var sysUser = sysUser.getSysUser1('1',model.create_by!''); %>
 
 ﻿<% 
