重新发送邮件功能，上一个提交是禁用部分表单功能

--- a/src/main/webapp/pages/credit/usercenter/all_orders.html
+++ b/src/main/webapp/pages/credit/usercenter/all_orders.html
@@ -36,6 +36,10 @@ tempDict.getSysDictDetailString('upload_busType',model.business_type !);
         .fixed-table-body {
         	height:115%;
         }
+        .disabled {
+            color: #aaa;
+            pointer-events: none;
+        }
     </style>
     <script type="text/javascript">
 	    var BASE_PATH = "${BASE_PATH }";
