--- a/src/main/webapp/pages/credit/industrysit/industrysitTitle__view.html
+++ b/src/main/webapp/pages/credit/industrysit/industrysitTitle__view.html
@@ -14,6 +14,16 @@ var bodyContent = {
 				<td>标题</td>
 				<td>${item.title}</td>
 			</tr>
+
+
+				<td>备注</td>
+				<td title="${item.remarks}" colspan="3">
+				<% if (strutil.length(item.remarks) > 25) { %>
+					${strutil.subStringTo(item.remarks, 0, 25)}...
+				<% 	} else { %>
+					${item.remarks}
+				<%  } %>
+			</td>
 	</table>
 	
 	<div style="height: 50px;clear: both;">&nbsp;</div>
