--- a/src/main/webapp/pages/credit/usercenter/total_manage/report_credit_analysis.html
+++ b/src/main/webapp/pages/credit/usercenter/total_manage/report_credit_analysis.html
@@ -64,7 +64,7 @@
                     <form id="formSearch" class="form-inline" role="form">
                         <div class="input-group col-md-4 d-flex justify-content-center table-search-input">
                             <label class="control-label" for="txt_search_reporter">名称：</label>
-                            <select class="form-control search-input"  id="txt_search_reporter" name="attr.name">
+                            <select class="form-control search-input"  id="txt_search_reporter" name="attr.tempId">
                                 <option value="" >请选择名称</option>
                             </select>
                             <!--<input type="text" class="form-control search-input" id="txt_search_reporter" placeholder="请输入报告员">-->
@@ -105,7 +105,7 @@ $(function(){
 		for(item in data){
 			html+="<option  value='"+data[item].userid+"'>"+data[item].realname+"</option>";
 		}
-		$("select[name='attr.name']").append(html);
+		$("select[name='attr.tempId']").append(html);
 	})	
 });
 
