PHM指向Ulab链接，地图上链接跳转到实验室，地球全屏页面的视频显示控制放在session,实验室总数和互联数，实验室订单页面的菜单，修改目录asserts为assets，标记部分没用的文件加前缀del_

--- a/src/main/webapp/WEB-INF/pages/phm/index.html
+++ b/src/main/webapp/WEB-INF/pages/phm/index.html
@@ -345,9 +345,8 @@
 </div>
 
 
-<script src="${contextPath}/static/phm/assets/js/jquery-2.2.4.js" type="text/javascript" charset="utf-8"></script>
-<script src="${contextPath}/static/phm/assets/echarts/echarts-4.0.min.js" type="text/javascript"
-        charset="utf-8"></script>
+<script src="${contextPath}/static/phm/assets/js/jquery-2.2.4.js"></script>
+<script src="${contextPath}/static/phm/assets/echarts/echarts-4.0.min.js"></script>
 <script src="${contextPath}/static/phm/js/myScroll.js"></script>
 <script>
     /*屏幕描述
@@ -381,7 +380,7 @@
     //通過右邊打開Ulab
 
     $(".rightPicContentBox").click(function () {
-        open("${contextPath}/lab/full", '_self')
+        open("${contextPath}/lab/index", '_self')
     });
 
     //=====================左侧计时器=========================
