--- a/src/main/webapp/WEB-INF/pages/lab/full.html
+++ b/src/main/webapp/WEB-INF/pages/lab/full.html
@@ -1,39 +1,39 @@
-
-<html lang="zh-CN" >
+<html lang="zh-CN">
 <script src="${contextPath!}/static/assets/js/jquery-2.2.4.js"></script>
-<script>
-    /*屏幕描述
-     一共 7x3 个屏幕，每一块屏幕是1360x768，
-     总共的大小就是9520x2304，比预计像素少7x6=42个像素。*/
-
-    var pageH = $(window).height();
-    var pageW = pageH * 16 * 7 / (9 * 3);
-    var bodyScale = pageH / 595;
-    var bodyFontSize = bodyScale * 100 + "%";
-    if (pageH > 2300) { // 如果是大屏幕(2304)
-        pageW -= 52
-    }
-    function pageResize() {
-        $("body").css("font-size", bodyFontSize);
-        $("#content").css("width", pageW);
-        $(".fullScreen_map").css("width", pageW);//全屏页面是绝对定位,宽度100%只能取自屏幕
-        console.log("~~~~~~~~~窗口高度：" + pageH + ",\n宽度:"+pageW+" \nbody字号：" + bodyFontSize)
-    }
-
-    var contextPath='${contextPath!}';
-</script>
 
 <link rel="stylesheet" href="${contextPath!}/static/assets/css/bootstrap.min.css">
 <link rel="stylesheet" href="${contextPath!}/static/css/common.css">
 <link rel="stylesheet" href="${contextPath!}/static/css/index_left.css">
 <link rel="stylesheet" href="${contextPath!}/static/css/fullScreen_map.css">
-<div id="content" class="contai"  >
+<div id="content" class="contai">
+    <script>
+        /*屏幕描述
+         一共 7x3 个屏幕，每一块屏幕是1360x768，
+         总共的大小就是9520x2304，比预计像素少7x6=42个像素。*/
+
+        var pageH = $(window).height();
+        var pageW = pageH * 16 * 7 / (9 * 3);
+        var bodyScale = pageH / 595;
+        var bodyFontSize = bodyScale * 100 + "%";
+        if (pageH > 2300) { // 如果是大屏幕(2304)
+            pageW -= 52
+        }
+
+        function pageResize() {
+            $("body").css("font-size", bodyFontSize);
+            $("#content").css("width", pageW);
+            $(".fullScreen_map").css("width", pageW);//全屏页面是绝对定位,宽度100%只能取自屏幕
+            console.log("~~~~~~~~~窗口高度：" + pageH + ",\n宽度:" + pageW + " \nbody字号：" + bodyFontSize)
+        }
+
+        var contextPath = '${contextPath!}';
+    </script>
 
     <script>
-        //进入时的视频淡出效果，开发时注掉下面这些代码
+        //进入时的视频淡出效果
         function videoFadeOut() {
             $("body #content").prepend('<div id="mask" style="background-color: black">' +
-                '<video src="' + contextPath + '/static/img/movieHead_4480.ogv"  width="' + pageW*1.04 + '" height="105%" preload="auto" >抱歉，您的浏览器不支持video标签</video>' +
+                '<video src="' + contextPath + '/static/img/movieHead_4480.ogv"  width="' + pageW * 1.04 + '" height="105%" preload="auto" >抱歉，您的浏览器不支持video标签</video>' +
                 '</div>'
             );
             var $video = $('video');
@@ -41,7 +41,7 @@
                 $(this)[0].play()
             });
             $video[0].addEventListener('ended', function () {
-                $(this).css('pointer-events','none')
+                $(this).css('pointer-events', 'none')
                     .parent().animate({
                     opacity: 0
                 }, 3000, function () {
@@ -50,11 +50,14 @@
             });
         }
 
-        var fromPage='${fromPage!}';
         //开场视频
-        if(fromPage!=="fullScreen"){
+        let session = JSON.parse(sessionStorage.getItem('data'));
+        let noFullVideo = session&&session.noFullVideo;
+        // var fromPage = '${fromPage!}';
+        if (!noFullVideo) {
             videoFadeOut();
         }
+        sessionStorage.setItem('data', JSON.stringify({noFullVideo: true}));
     </script>
     ##layout("fullScreen_map.html", {}){
     ##}
